library/general/requirednodeselectors/samples/require-os-node-selector/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-allowed
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
  nodeSelector:
    "kubernetes.io/os": "windows"
